<resources>
    <!--    Sign Up-->
    <string name="app_name">RuMishliChat</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="labelSignUp">Sign Up</string>
    <string name="btn_SignUp_registration">Registration</string>
    <string name="btn_SignUp_Login">Login</string>
    <!--    Login       -->
    <string name="labelLogin">Login</string>

    <!--    bottom navbar -->
    <string name="chat_icon">chat</string>
    <string name="forum_icon">forum</string>
    <string name="other_icon">other</string>
    <string name="setting_icon">settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="chat">chat</string>
    <string name="forum">forum</string>
    <string name="other">other</string>
    <string name="setting">setting</string>

</resources>