<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/labelLogin"
        android:textColor="@color/colorText"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:fontFamily="@font/gilroy_bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:fontFamily="@font/gilroy_light"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:hint="@string/enter_email"
        android:id="@+id/etEmail"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:inputType="textEmailAddress"/>
    <EditText
        android:fontFamily="@font/gilroy_light"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:hint="@string/enter_password"
        android:id="@+id/etPassword"
        android:textColor="@color/colorText"
        android:background="@color/colorTextBackground"
        android:inputType="textPassword"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signUp_login"
            android:text="@string/btn_SignUp_Login"
            android:fontFamily="@font/gilroy_bold"
            android:layout_marginEnd="5dp"
            android:padding="10dp"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signUp_registration"
            android:fontFamily="@font/gilroy_bold"
            android:text="@string/btn_SignUp_registration"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/colorBtnNonObligatory"

            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>